# justomize

./: CMakeLists.txt  README.md
cmake/: arm-mac-toolchain.cmake
docs/example/: base.json  example.sh
docs/example/variant/: variant.json
src/: main.cpp
tests/: CMakeLists.txt  run_test.cmake
